@@ -1,59 +1,70 @@
-import java.net.DatagramSocket;
-import java.nio.*;
-import java.util.LinkedList;
+package Server;
 
-public class Protocol {
+import java.net.InetAddress;
+import java.nio.*;
+
+public class Protocol{
 	String state;
 	byte[] responseBuffer = new byte[1000];
 	Game game = new Game();
+	Server server;
 	
-	Protocol() {
+	Protocol(Server activeServer) {
 		state = "WAITING";
+		server = activeServer;
 	}
 	
-	byte[] processRequest(byte[] incomingData, DatagramSocket server) {
+	byte[] processRequest(byte[] incomingData) {
 		ByteBuffer byteBuffer = ByteBuffer.wrap(incomingData);
 		try {
 			switch(byteBuffer.getInt()) {
 				// Connection Request
 				case 0:
 					//System.out.println("Connection request received.");
-					return formatResponse(game.players, game.bonusPoints, 0);
+					return formatResponse(0);
 				// Input
 				case 1:
 					//System.out.println("User Input Received");
 					game.getPlayer(byteBuffer.getInt()).takeInput(byteBuffer.getInt());
-					return formatResponse(game.players, game.bonusPoints, 1);
+					return formatResponse(1);
 				case 2:
-					//System.out.println("Update Requested");
-					return formatResponse(game.players, game.bonusPoints, 1);
+					System.out.println("Player Connected");
+					
+					game.getPlayer(byteBuffer.getInt()).connected = true;
+					game.playersConnected++;
+					System.out.println(game.playersConnected);
+					System.out.println(game.players.size());
+					if (game.playersConnected > 1 && game.playersConnected == game.players.size()) {
+						System.out.println("StartGame");
+						startGame();
+					}
+					return formatResponse(1);
 				default:
 					System.out.println("Unrecognized Packet");
-					server.close();
 					return new byte[0];
 			}
 		}
 		catch(Exception ex) {
 			ex.printStackTrace();
 			System.out.println(incomingData[0]);
-			server.close();
+			server.socket.close();
 			return new byte[0];
 		}
 		
 	}
 	
-	byte[] formatResponse(LinkedList<Player> players, LinkedList<Bonus> bonusPoints, int responseType) {
+	byte[] formatResponse(int responseType) {
 		ByteBuffer byteBuffer = ByteBuffer.wrap(responseBuffer);
 		switch(responseType) {
 			case 0:
 				if(state != "GAMEINPROGRESS") {
-					game.players.add(new Player(game.players.size() + 1));
+					game.players.add(new Player(game.players.size() + 1, new Client(server.receivePacket.getAddress(), server.receivePacket.getPort())));
 					byteBuffer.putInt(0); // Type byte
-					byteBuffer.putInt(game.players.getLast().id); // Player ID
-					System.out.println("Player " + game.players.getLast().id + " has joined!");
+					byteBuffer.putInt(game.players.get(game.players.size()-1).id); // Player ID
+					System.out.println("Player " + game.players.get(game.players.size()-1) + " has joined!");
 					
 					// Add player information to the buffer
-					for (int i = 1; i <= players.size(); i++) {
+					for (int i = 1; i <= game.players.size(); i++) {
 						byteBuffer.putInt(0); // Byte indicating another player is coming
 						byteBuffer.putFloat(game.getPlayer(i).position.x);
 						byteBuffer.putFloat(game.getPlayer(i).position.y);
@@ -64,7 +75,6 @@ public class Protocol {
 					byteBuffer.putInt(-1); // Byte indicating that there are no more players
 					
 					if(game.players.size() > 1) {
-						startGame();
 						byteBuffer.putInt(1); // Byte indicating that game has started
 					}
 					else {
@@ -79,7 +89,7 @@ public class Protocol {
 				
 			case 1:
 				byteBuffer.putInt(1);
-				for (int i = 1; i <= players.size(); i++) {
+				for (int i = 1; i <= game.players.size(); i++) {
 					byteBuffer.putInt(0);
 					if(game.getPlayer(i).alive == false) {
 						byteBuffer.putInt(0); // Byte indicating that player has lost
@@ -96,10 +106,10 @@ public class Protocol {
 				byteBuffer.putInt(-1);
 				
 				// Add bonus point information
-				for(int x = 0; x < bonusPoints.size(); x++) {
+				for(int x = 0; x < game.bonusPoints.size(); x++) {
 					byteBuffer.putInt(0); // Byte indicating that more bonus point info is coming
-					byteBuffer.putFloat(bonusPoints.get(x).position.x);
-					byteBuffer.putFloat(bonusPoints.get(x).position.y);
+					byteBuffer.putFloat(game.bonusPoints.get(x).position.x);
+					byteBuffer.putFloat(game.bonusPoints.get(x).position.y);
 				}
 				byteBuffer.putInt(-1); // Byte indicating that no more bonus points are coming
 				
